Updating my LinkedIn

--- a/index.html
+++ b/index.html
@@ -37,12 +37,12 @@
                 <p style="text-align:center">
                   <a target="_blank" href="mailto:myownEmail">Email</a> &nbsp/&nbsp
                   <!-- <a target="_blank" href="data/Resume_YuYing_202402.pdf">CV</a> &nbsp/&nbsp -->
-                  <a target="_blank" href="https://scholar.google.com.tw/citations?user=b0YKBxgAAAAJ&hl">LinkedIn</a> &nbsp/&nbsp
+                  <a target="_blank" href="https://www.linkedin.com/in/nattran/">LinkedIn</a> &nbsp/&nbsp
                   <a target="_blank" href="https://github.com/FaZeDrug/">GitHub</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/YuYing2.png"><img style="width:80%;max-width:80%" alt="profile photo" src="images/natprofilecircle.png" class="hoverZoomLink"></a>
+                <a href="images/natprofilecircle.png"><img style="width:80%;max-width:80%" alt="profile photo" src="images/natprofilecircle.png" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
