--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Natasha Tran
                 </p>
-                <p style="text-align: justify;">I am a second-year Computer Science undergraduate at UC San Diego.
+                <p style="text-align: justify;">I am a second-year Computer Science undergraduate student at UC San Diego.
   
                 </p>
                 <p style="text-align: justify;">
@@ -35,7 +35,7 @@
                 </strong>
                 </p>
                 <p style="text-align:center">
-                  <a target="_blank" href="mailto:myownEmail">Email</a> &nbsp/&nbsp
+                  <a target="_blank" href="mailto:nmt003@ucsd.edu">Email</a> &nbsp/&nbsp
                   <!-- <a target="_blank" href="data/Resume_YuYing_202402.pdf">CV</a> &nbsp/&nbsp -->
                   <a target="_blank" href="https://www.linkedin.com/in/nattran/">LinkedIn</a> &nbsp/&nbsp
                   <a target="_blank" href="https://github.com/FaZeDrug/">GitHub</a>
@@ -137,9 +137,8 @@
                 <a target="_blank" href="https://cseweb.ucsd.edu/~mkchandraker/classes/CSE291/Winter2020/">CSE291A00 WI20</a> <br>
                 <br> -->
                 <!-- Honors and Awards: <br> -->
-                <!-- <a target="_blank" href="https://research.facebook.com/blog/2022/2/announcing-the-recipients-of-the-2022-meta-phd-research-fellowship/">2022 Meta PhD Research Fellowship Finalist</a><br>
-                <a target="_blank" href="https://www.qualcomm.com/research/university-relations/innovation/fellowship/2022-north-america">2022 Qualcomm Innovative Fellowship Finalist</a><br>
-                <a target="_blank" href="https://research.google/outreach/phd-fellowship/recipients/">2022 Google PhD Fellowship Recipient</a> [<a target="_blank" href="https://cse.ucsd.edu/about/news/yu-ying-yeh-phd-24-cses-newest-recipient-prestigious-google-fellowship">CSE News</a>] -->
+                <!-- <a target="_blank" href="https://www.sandiegouniontribune.com/north-county-community-news/story/2022-07-05/north-county-high-schools-name-top-graduates">2022 Valedictory Circle (Escondido High School)</a><br> -->
+                <!-- <a target="_blank" href="https://www.qualcomm.com/research/university-relations/innovation/fellowship/2022-north-america">2022 Qualcomm Innovative Fellowship Finalist</a><br> -->
                 
                 <!-- <br>
               </td>
