--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                   I am always looking for new opportunities for growth and ways to solve problems, which is why I am interested in CS! I hope to participate in the ever-growing development of technology through my ambitions.
                 </p>
                 <p>
-                  Currently, I am working on a CSE research project, <i>Parental Concerns in Children Gaming in Roblox</i>, through UCSD's Early Research Scholars Program.
+                  Currently, I have finished a CSE research project, <i>Parental Concerns in Children Gaming in Roblox</i>, through UCSD's Early Research Scholars Program.
                 </p>
                 <p style="color: #d0176d" style="text-align: justify;"><strong>I'm actively looking for Summer 2025 internships. 
                 </strong>
