--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Natasha Tran
                 </p>
-                <p style="text-align: justify;">I am a second-year Computer Science undergraduate student at UC San Diego.
+                <p style="text-align: justify;">I am a third-year Computer Science undergraduate student at UC San Diego.
   
                 </p>
                 <p style="text-align: justify;">
@@ -113,7 +113,7 @@
           </tbody></table>
           <table width="100%" align="center" border="0" cellpadding="20"><tbody>
             
-            <!-- <tr>
+            <!-- <<tr>
               <td style="padding:20px;width:25%;vertical-align:middle"><img src="images/conf_logo.png" width="100%"></td>
               <td width="75%" valign="center">
                 Reviewer: 
