--- a/home.html
+++ b/home.html
@@ -58,7 +58,7 @@
 
             
             <ul class = "menu">
-                <li><a href="home.html">home</a></li>
+                <li><a href="index.html">home</a></li>
                 <li><a href="about.html">about</a></li>
                 <li><a href="projects.html">projects</a></li>
                 <li><a href="experience.html">experience</a></li>
