changed .JPG file names to .jpg in order for github.io page to work, erased cringe FAANG in bio, pasted styles.css into this one so that the links are blue and the media queries is updated

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <h1> Natasha Tran</h1>
 
                 <p>
-                    I am <b>Natasha Tran</b>, a <del><abbr title="FaceBook, Amazon, Apple, Netflix, Google">FAANG</abbr> engineer</del> <ins>college third-year student</ins>. I am pursuing a career in the computer science field.
+                    I am <b>Natasha Tran</b>, a college fourth-year student. I am pursuing a career in the computer science field.
                     <br><br>
                     I am attending the University of Califonia, San Diego to obtain my BS in Computer Science, with prospects of becoming a Software Engineer or a Software Developer.
                     <br><br>
@@ -118,13 +118,17 @@
                     <img src="robloxgrown.jpg" alt="Natasha playing Roblox on laptop, looking back at camera" width="200" height="200">
                     <figcaption>Computer lover</figcaption>
                 </figure>
+                <!-- <figure>
+                    <img src="babynat.jpg" alt="Baby Nat playing Roblox" width="200" height="200">
+                    <figcaption>ROBLOX gamer (since 2013)</figcaption>
+                </figure> -->
                 <figure>
-                    <img src="natgym.jpg" alt="Mirror selfie of Natasha flexing arm at gym, with big arm muscle" width="200" height="200">
-                    <figcaption>Gym lover</figcaption>
+                    <img src="ersp.jpg" alt="Natasha presenting" width="200" height="200">
+                    <figcaption>Published researcher</figcaption>
                 </figure>
                 <figure>
-                    <img src="glasses.jpg" alt="Natasha posing for selfie, wearing glasses and looking great" width="200" height="200">
-                    <figcaption>Fake glasses wearer</figcaption>
+                    <img src="natgym.jpg" alt="Mirror selfie of Natasha flexing arm at gym, with big arm muscle" width="200" height="200">
+                    <figcaption>Fitness enthusiast</figcaption>
                 </figure>
             </div>
         </section>
